<resources>
    <string name="app_name">Workout</string>
    <string name="image">Image</string>
    <string name="str_start">Start</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="_10">10</string>
    <string name="do_this">Do this</string>
    <string name="upcoming_exercise">Upcoming Exercise</string>
    <string name="end">END</string>
    <string name="you_have_finished_workout">You have finished workout!!</string>
    <string name="congratulation">Congratulation!!</string>
    <string name="finish">Finish</string>
    <string name="weight_in_kg">WEIGHT (in kg)</string>
    <string name="height_in_cm">HEIGHT (in cm)</string>
    <string name="history">History</string>
    <string name="calculator">Calculator</string>
    <string name="bmi">BMI</string>
    <string name="history_image">History image</string>
    <string name="wehgt_in_kg">WEIGHT (in kg)</string>

</resources>