<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".exerciseEndActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/end"

        android:textColor="@color/accent"
        android:textSize="35sp"

        />

    <LinearLayout
        android:id="@+id/llExerciseEnd"
        android:layout_width="@dimen/start_button_size"
        android:layout_height="@dimen/start_button_size"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/start_button_margin_top"
        android:background="@drawable/item_circular_color_accent_border"
        android:gravity="center">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_action_done"
            android:contentDescription="@string/image" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/congratulation"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/you_have_finished_workout"
        android:textColor="@color/black" />


    <Button
        android:id="@+id/finishButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:backgroundTint="@color/accent"
        android:text="@string/finish"
        android:textColor="@color/black" />


</LinearLayout>